  PropertyImpl.prepareValue() added
  EntityConnectionImpl, minor refactoring
  EntityTableModel.get/SetReportDataSource() removed
  Criteria.getValues() now uses generics wildcard
  Criteria.asString() renamed to getWhereClause()
  EntityCriteria now extends Criteria<Property.ColumnProperty>
  EntityApplicationPanel.savePreferences() added and called when exiting
  EntityPanel.savePreferences() added
  EntityModel.savePreferences() added
  EntityTableModel.savePreferences() added
  DefaultEntityTableModel.savePreferences() implemented and applyPreferences() added and called during construction
  UiUtil.showInDialog() overloaded with closeAction parameter
  DefaultEntityTableModel, saving and applying preferences logs errors instead of throwing RuntimeException
  AbstractFilteredTableModel, column comparators initialized lazily
  Configuration.USE_CLIENT_PREFERENCES added
  DefaultEntityTableModel uses the above
  Util.removeUserPreference() added
  Util.flushUserPreferences() added, called during EntityApplicationPanel.exit()
  DefaultEntityTableModelTest.preferences() added
  Util, added some javadoc
  UiUtil.showInDialog() refactored and renamed to displayInDialog()
  AbstractFilteredTableModel.getComparable() is now abstract
  AbstractFilteredTableModelTest.findNextItemCoordinate() improved
  AbstractTableColumnSyncPanel, regression bug, this class could not be instantiated with hidden columns (allowed with preferences)
  AbstractFilteredTableModel.columns field added to help with the above
  EntityTableSearchPanel constructor simplified
  FilteredTableColumnModel refactored out of FilteredTableModel
  DefaultFilteredTableColumnModel and DefaultFilteredTableColumnModelTest added
  TableSortModel refactored out of AbstractFilteredTableModel
  DefaultTableSortModel and DefaultEntityTableSortModel added
  TableSortModel.sort() added, getRowComparator() removed
  AbstractFilteredTableModel.sorting field removed