@@ -18,19 +18,4 @@ public interface Serializer<V> {
    * @throws SerializeException in case of an exception
    */
   String serialize(final List<V> values) throws SerializeException;
-
-  /**
-   * An exception occurring during serialization
-   */
-  class SerializeException extends Exception {
-
-    /**
-     * Instantiates a new SerializeException.
-     * @param message the message
-     * @param cause the root cause
-     */
-    public SerializeException(final String message, final Throwable cause) {
-      super(message, cause);
-    }
-  }
 }
