@@ -1,0 +1,25 @@
+/*
+ * Copyright (c) 2004 - 2010, Björn Darri Sigurðsson. All Rights Reserved.
+ */
+package org.jminor.common.model.tools;
+
+/**
+ * An exception originating from a scenario run
+ */
+public final class ScenarioException extends Exception {
+
+  /**
+   * Instantiates a new ScenarioException.
+   */
+  public ScenarioException() {
+    super();
+  }
+
+  /**
+   * Instantiates a new ScenarioException.
+   * @param cause the root cause
+   */
+  public ScenarioException(final Throwable cause) {
+    super(cause);
+  }
+}
