@@ -14,16 +14,16 @@ public class LoadTestModelTest {
   private static final LoadTestModel.UsageScenario SCENARIO = new LoadTestModel.AbstractUsageScenario("test") {
     int counter = 0;
     @Override
-    protected void performScenario(final Object application) throws LoadTestModel.ScenarioException {
+    protected void performScenario(final Object application) throws ScenarioException {
       if (counter++ % 2 == 0) {
-        throw new LoadTestModel.ScenarioException();
+        throw new ScenarioException();
       }
     }
   };
 
   private static final LoadTestModel.UsageScenario SCENARIO_II = new LoadTestModel.AbstractUsageScenario("testII") {
     @Override
-    protected void performScenario(final Object application) throws LoadTestModel.ScenarioException {}
+    protected void performScenario(final Object application) throws ScenarioException {}
   };
 
   @Test(expected = IllegalArgumentException.class)
